--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "ovic-core/framework": "src/"
+            "OvicFramework\\": "src/"
         },
         "files": [
             "src/helpers.php"
