--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         ]
     },
     "require": {
-        "php": ">= 5.6"
+        "php": ">= 5.6",
+        "nwidart/laravel-modules": "^6.0"
     },
     "extra": {
         "laravel": {
