--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     },
     "scripts": {
         "post-update-cmd": [
-            "@php artisan vendor:publish --provider=\"Ovic\\Framework\\FrameworkServiceProvider\""
+            "@php artisan vendor:publish --tag=ovic-assets"
         ]
     },
     "repositories": [
