--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     },
     "scripts": {
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=ovic-assets"
+            "@php artisan vendor:publish --tag=ovic-assets",
+            "@php artisan vendor:publish --tag=ovic-config"
         ]
     },
     "repositories": [
