--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "authors": [
         {
             "name": "Ovic Team",
-            "email": "https://kutethemes.com"
+            "email": "tf.kutethemes@gmail.com"
         }
     ],
     "autoload": {
