--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "autoload": {
         "psr-4": {
+            "App\\": "app/",
             "Ovic\\Framework\\": "src/"
         },
         "files": [
