--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
             ]
         },
         "branch-alias": {
-          "dev-master": "6.0-dev"
+          "dev-master": "1.0.0"
         }
     },
     "repositories": [
