--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     },
     "require": {
         "php": ">= 5.6",
+        "laravel/valet": "*",
         "doctrine/dbal": "*",
         "ovic-core/user": "*",
         "nwidart/laravel-modules": "^6.0"
