--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
     },
     "require": {
         "php": ">= 5.6",
-        "laravel/ui": "*",
         "laravel/valet": "*",
         "doctrine/dbal": "*",
         "ovic-core/user": "*",
+        "laravel/ui": "^1.1",
         "nwidart/laravel-modules": "^6.0"
     },
     "extra": {
