--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Ovic\\Framework\\": "src/",
-            "Ovic\\Framework\\Middleware": "src/Middleware"
+            "Ovic\\Framework\\": "src/"
         },
         "classmap": [
             "database/migrations",
