--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
             "src/helpers.php"
         ]
     },
-    "require-dev": {
+    "require": {
         "php": ">= 5.6",
         "doctrine/dbal": "*",
         "laravel/ui": "^1.1",
