--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,9 @@
     },
     "require": {
         "php": ">= 5.6",
+        "ext-json": "*"
+    },
+    "require-dev": {
         "doctrine/dbal": "*",
         "laravel/ui": "^1.1",
         "nwidart/laravel-modules": "^6.0"
