--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
     },
     "require-dev": {
         "doctrine/dbal": "*",
-        "laravel/ui": "^1.1",
-        "nwidart/laravel-modules": "^6.0"
+        "laravel/ui": "*",
+        "nwidart/laravel-modules": "*",
     },
     "extra": {
         "laravel": {
