--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         },
         "classmap": [
             "database/migrations",
+            "database/seeds",
             "src/Models"
         ],
         "files": [
@@ -36,7 +37,7 @@
         "doctrine/dbal": "2.*",
         "laravel/ui": "1.*",
         "nwidart/laravel-modules": "6.*",
-        "laravel/framework": "6.0.*",
+        "laravel/framework": "6.0.*"
     },
     "extra": {
         "laravel": {
