--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,11 @@
     },
     "require": {
         "php": ">= 5.6",
-        "ext-json": "*"
+        "ext-json": "*",
+        "laravel/ui": "1.*",
+        "nesbot/carbon": "2.*",
+        "maatwebsite/excel": "3.*",
+        "nwidart/laravel-modules": "6.*"
     },
     "require-dev": {
         "doctrine/dbal": "2.*",
